disallowed syscall "socket" on ppc64el
- Ubuntu 23.10 and Debian Unstable
- tracker-miners 3.4.5 with cherry-picks of
- libseccomp 2.5.4
- glibc 2.38
I am getting this error with the build tests on Ubuntu's ppc64el Launchpad builders or on Debian's ppc64el. I don't have this failure on other architectures.
ERROR: ests/test-extraction-data/video/mp4-video-without-audio.expe
(__main__.GenericExtractionTestCase.ests/test-extraction-data/video/mp4-video-without-audio.expe)
----------------------------------------------------------------------
Traceback (most recent call last):
File "/<<PKGBUILDDIR>>/tests/functional-tests/extractor-generic.py", line 99, in generic_test_extraction
jsonld = fixtures.get_tracker_extract_output(extra_env,
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
File "/<<PKGBUILDDIR>>/tests/functional-tests/fixtures.py", line 385, in get_tracker_extract_output
raise RuntimeError(
RuntimeError: tracker-extract returned non-zero exit code: -31
Error output:
Disallowed syscall "socket" caught in sandbox
Full build logs
https://launchpad.net/~jbicha/+archive/ubuntu/arch/+sourcepub/15193802/+listing-archive-extra
Or click Build-Attempted at https://buildd.debian.org/status/package.php?p=tracker-miners
Edited by Jeremy Bicha